--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,5 @@
 <!doctype html>
 <html lang="en">
-<!--siempre que se inicia un archivo html de debe iniciar y finalizar con "<html>" y "</html>"-->
-
-<!--casi todos los comandos deben iniciar sin "/" y se deben cerra con "/" ejem: <h1>title</h1>-->
-
-<!--el comando "<head>" es lo que esta en la pestan~a-->
 <head>
 	<title>Cortell</title>  
 	<link rel="shortcut icon" type="image/x-icon" href="img/Logicon's/Icon.ico"> 
@@ -12,39 +7,10 @@
 	<meta name="keywords" content="clothes, design, style, fashion, new clothes, men's clothes, women's clothes, flannels, aesthetic, ropa, diseño, estilo, moda, ropa nueva, roda de hombre, ropa de mujer, franelas, aesthetic"/>
 	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
 </head>
-<!--el comando "<h1>" sirve para colocar titulos--> 
-
-<!--el max del comando "<h#>" es de 6. mas de ese numero no se puede-->
-
-<!--el comando "<body>" sirve para indicar el inicio de nuestra web-->
-
-<!--el comando "<br />" sirve para hacer una separacion entre un titulo y otro-->  
-
-<!--el comando "<b>" "</b>" sirve para colocar negritas-->
-
-<!--el comando "<strong>" "</strong>" sirve para resaltar temas para el buscador de google *estas tambien se ponene en negritas*-->	
-
-<!--el comando "<span>" "</span>" sirve para editar la tipografia con CSS-->
-
-<!--el comando "<i>" "</i>" sirve para cologar letras cursivas-->
-
-<!--el comando "<blockquote>" "/blockquote" sirve para escribir citas-->
-
-<!--el comando "<cite>" "</cite>" sirve para colocar el autor de la cita-->
-
-<!--el comando "<hr>" "</hr>" sirve para colocar una linea para hacer una ceparacion-->
-
-<!--para agragar URL "<a href="URL">" en el medio va el nombre  "</a>" ejem: <a href="https://www.google.com/">Ir a google</a>--> 
-
-<!--tambien se puedo usar "<a href="">" "</a>" para crear rutas hacia una carpeta ejem: <a href="img/logo.png">ir al logo</a>-->
-
-<!--para que el "<a>" "</a>" te abra otras pestana se debe colocar delante de la "a" "target="_blank""-->
-
-<!--para agregar un logo en la pestana se coloca "<link rel="shortcut icon" type="image/x-icon" href="*lugar donde esta el icono*favicon.ico">"-->
 <body>
    
 	<header>
-			<div class="icon">
+			<div> class="icon">
 				<img src="img/Logicon's/Icon.png" width="70" alt="Icon"> 
 			</div>
 		<nav>
