--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,8 @@
 <body>
    
 	<header>
-			<div> class="icon">
+			<div> 
+				<class="icon">
 				<img src="img/Logicon's/Icon.png" width="70" alt="Icon"> 
 			</div>
 		<nav>
