--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Cortell</title>  
-	<link rel="shortcut icon" type="image/x-icon" href="img/Logicon's/Icon.ico"> 
-	<meta name="description" content="Albion Online is a non-linear mmorpg, where you write your own story without following a set path. Explore a vast open world with 5 unique biomes, everything you do will have an impact on the world, with Albion's player-oriented economy, players create almost all gear from the resources they obtain, the gear you wear defines who you are, switch weapons and armor to go from knight to mage, or play as a mix of both classes."/>
-	<meta name="keywords" content="clothes, design, style, fashion, new clothes, men's clothes, women's clothes, flannels, aesthetic, ropa, diseño, estilo, moda, ropa nueva, roda de hombre, ropa de mujer, franelas, aesthetic"/>
+	<title>Cortell</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/Logicon's/Icon.ico">
+	<meta name="description"
+		content="Albion Online is a non-linear mmorpg, where you write your own story without following a set path. Explore a vast open world with 5 unique biomes, everything you do will have an impact on the world, with Albion's player-oriented economy, players create almost all gear from the resources they obtain, the gear you wear defines who you are, switch weapons and armor to go from knight to mage, or play as a mix of both classes." />
+	<meta name="keywords"
+		content="clothes, design, style, fashion, new clothes, men's clothes, women's clothes, flannels, aesthetic, ropa, diseño, estilo, moda, ropa nueva, roda de hombre, ropa de mujer, franelas, aesthetic" />
 	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
+
 <body>
-   
+
 	<header>
-			<div> 
-				<class="icon">
-				<img src="img/Logicon's/Icon.png" width="70" alt="Icon"> 
-			</div>
+		<div class="icon">
+			<img src="img/Logicon's/Icon.png" width="70" alt="Icon">
+		</div>
 		<nav>
 			<ul>
 				<li>
@@ -24,56 +31,57 @@
 			</ul>
 		</nav>
 	</header>
-	
+
 	<section class="wrapper">
 		<section class="main">
 			<article>
-			<aside>
-   
-				<h1>BEST QUALITY</h1>
-	
-				<p class="pf">Cortell offers you the best clothes made with Egyptian cotton.</p>
-			
-			</aside>
+				<aside>
+
+					<h1>BEST QUALITY</h1>
+
+					<p class="pf">Cortell offers you the best clothes made with Egyptian cotton.</p>
+
+				</aside>
 			</article>
 			<article>
-			<aside>
-			
-				<h2>WHY PREFER US?</h2>
-	
-				<p class="pff">Because we offer you comfortable, light, resistant and tailor-made clothing.</p>
-			
-			</aside>
+				<aside>
+
+					<h2>WHY PREFER US?</h2>
+
+					<p class="pff">Because we offer you comfortable, light, resistant and tailor-made clothing.</p>
+
+				</aside>
 			</article>
 			<article>
-			
+
 				<h3>WOMEN</h3>
-	
+
 				<img class="01" src="img/womenswear/1.jpg">
 				<br><br>
 				<img class="02" src="img/womenswear/2.jpg">
 				<br><br>
 				<img class="03" src="img/womenswear/3.jpeg">
-				
+
 			</article>
 			<article>
-			
+
 				<h4>MEN</h4>
-	
+
 				<img class="04" src="img/Mens clothing/1.jpg">
 				<br><br>
-				<img class="05" src="img/Mens clothing/2.jpg"> 
+				<img class="05" src="img/Mens clothing/2.jpg">
 				<br><br>
-				<img class="06" src="img/Mens clothing/3.jpg"> 
+				<img class="06" src="img/Mens clothing/3.jpg">
 				<br><br>
-				
+
 			</article>
 		</section>
 	</section>
-	
+
 	<footer>
 		<p class="©">© 2023 TheLizrof</p>
 	</footer>
-	
+
 </body>
+
 </html>
